# icepyck

./: .gitignore  README.md  SPEC_FEEDBACK.md  create_test_data.py  pyproject.toml
examples/: benchmark.py  benchmark_local.py  benchmark_s3.py  branches_and_tags.py  compare_era5.py  compare_with_icechunk.py  conflict_handling.py  diff_viewer.py  quick_start.py  read_era5_sample.py  read_local_repo.py  time_travel.py  write_and_time_travel.py  xarray_roundtrip.py
icepyck/: __init__.py  ancestry.py  chunks.py  crockford.py  diff.py  header.py  ids.py  manifest.py  repo.py  repo_state.py  repository.py  session.py  snapshot.py  storage.py  store.py  verify.py  writers.py
spec/: flatbuffers  spec.md
tests/: conftest.py  test_branches_tags.py  test_chunks.py  test_conflict.py  test_crockford.py  test_diff.py  test_header.py  test_init_repo.py  test_manifest.py  test_move.py  test_phase1_foundation.py  test_repo.py  test_snapshot.py  test_spec_behavior.py  test_storage_reads.py  test_store_list_dir.py  test_validation.py  test_verify.py  test_writable_session.py  test_write_store.py  test_write_validation.py  test_writers.py  test_xarray_equality.py  test_xarray_group.py
