[project]
name = "icepyck"
version = "0.1.0"
description = "Add your description here"
readme = "PROMPT.md"
authors = [
    { name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flatbuffers",
    "rich>=14.3.3",
    "s3fs",
    "zarr>=3",
    "zstandard",
]

[dependency-groups]
dev = [
    "icechunk>=2.0.0a0",
    "mypy",
    "numpy>=2.4.4",
    "pooch>=1.9.0",
    "pytest>=9.0.3",
    "ruff",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
    "zarr>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
markers = [
    "validation: tests that compare icepyck output against the reference icechunk package",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Generated flatbuffers code is untyped
exclude = ["icepyck/generated/"]
